--- a/LUAD.Rmd
+++ b/LUAD.Rmd
@@ -34,9 +34,9 @@ library(caret) #dummyVars for One Hot Encoding
 ```{r}
 missing.values <- c("N/A","na","?","", "NaN", "not reported", "NA")
 
-#data <- read.csv("C:\\Users\\sakma\\Desktop\\Ders Kayıtları\\Data Mining\\Final Project\\TCGA-LUAD_clinical.csv", na.strings=missing.values)
+data <- read.csv("C:\\Users\\sakma\\Desktop\\Ders Kayıtları\\Data Mining\\Final Project\\TCGA-LUAD_clinical.csv", na.strings=missing.values)
 
-data <- read.csv("C:\\Users\\Gaye\\OneDrive\\Masaüstü\\dersKayıtü\\DataScience\\DataScienceFinal\\TCGA-LUAD_clinical.csv", na.strings=missing.values)
+#data <- read.csv("C:\\Users\\Gaye\\OneDrive\\Masaüstü\\dersKayıtü\\DataScience\\DataScienceFinal\\TCGA-LUAD_clinical.csv", na.strings=missing.values)
 
 ```
 
@@ -544,19 +544,19 @@ print(paste('Test Accuracy:',1-misClasificError))
 
 ## 6.Y.b) LOGISTIC REGRESSION WTIH MISSING VALUES (*ERROR*)
 ```{r}
-training_samples_missing <- data$days_to_death %>% createDataPartition(p = 0.8, list = FALSE)
+#training_samples_missing <- data$days_to_death %>% createDataPartition(p = 0.8, list = FALSE)
 
 
-train_data_missing  <- data[training_samples_missing, ]
-test_data_missing <- data[-training_samples_missing, ]
+#train_data_missing  <- data[training_samples_missing, ]
+#test_data_missing <- data[-training_samples_missing, ]
 
-model_imbalance <- glm(days_to_death ~.,family=binomial,data=train_data_missing)
+#model_imbalance <- glm(days_to_death ~.,family=binomial,data=train_data_missing)
 
-fitted_results <- predict(model_imbalance,subset(test_data_missing,select=-c(days_to_death)),type='response')
-fitted.results <- ifelse(fitted.results > 0.5,1,0)
-misClasificError <- mean(fitted.results != test_data_missing$days_to_death)
+#fitted_results <- predict(model_imbalance,subset(test_data_missing,select=-c(days_to_death)),type='response')
+#fitted.results <- ifelse(fitted.results > 0.5,1,0)
+#misClasificError <- mean(fitted.results != test_data_missing$days_to_death)
 
-print(paste('Test Accuracy:',1-misClasificError))
+#print(paste('Test Accuracy:',1-misClasificError))
 
 ```
 
@@ -603,7 +603,7 @@ x_data <- subset(data_new, select = -c(days_to_death))
 y_data <- subset(data_new, select = c(days_to_death))
 
 kmeans_data <- kmeans(x_data, center=2, nstart=30)
-kmeans_data$centers
+#kmeans_data$centers
 ```
 - Now let's compare the predicted values and actual values
 ```{r}
@@ -640,10 +640,54 @@ table(predicted=hier_cut, true=data_new$days_to_death)
 hier_cut <- cutree(hier, 3)
 table(predicted=hier_cut, true=data_new$days_to_death)
 ```
+## *8*) Apply at least 2 Classification Techniques(Logistic Regression and Random Forest)
 
+- *a)* We're going to apply the two popular classifying algorithms Random Forest and Logistic Regression. We choose the Random Forest because it handles the overfitting if it exists very well and also deals with a large number of features. Due to we have 45 features we'll use the Random Forest's power for our benefit. Logistic Regression is very easy to use and it suits the binary class classification problems which we are dealing with. Logistic Regression works a bit faster than other classification algorithms. Due to our having balanced data, we're going to check the Accuracy which is basically the ratio of correct classified classes to total classes.
 
+- *8.1)* Logistic Regression: We have already apply the Logistic Regression in **Step 6** then we can move forward with step 8.2.
 
+- *8.2)* Random Forest: We're going to apply the powerful classifying algorithm Random Forest to try to predict whether the patient is a high risk or low risk.
 
+- We'll first fit and train our data with 500 trees which is default for Random Forest Algorithm and then we'll increase the number of trees and try to observe the change on the accuracy. 
+```{r}
+library(randomForest)
+rf <- randomForest(days_to_death~., data=train_data, proximity=TRUE, ntree = 500)
+print(rf)
+```
+
+Our out of bag(OOB) error is 4.93%, so the train data set model accuracy is around 95%.
+
+Now let's make a prediction with the train_data and see the performance.
+```{r}
+p1 <- predict(rf, train_data)
+confusionMatrix(p1, train_data$days_to_death)
+```
+
+The performance of training data is 98% almost all patient's classified correctly. Now let's test it with unseen test_data.
+```{r}
+p1 <- predict(rf, test_data)
+confusionMatrix(p1, test_data$days_to_death)
+```
+
+We have a very high accuracy with test data with 91.8%. Now let's plot the top 10 most important features and see the affects of them.
+```{r}
+varImpPlot(rf,
+           sort = T,
+           n.var = 10,
+           main = "Top 10 - Variable Importance")
+importance(rf)
+```
+It seems that the *ethnicity* column is the most important feature for the Random Forest algorithm.
+
+- Now try to increase the number of trees in the Random Forest and see the changes in the accuracy.
+```{r}
+rf <- randomForest(days_to_death~., data=train_data, proximity=TRUE, ntree = 1000)
+p1 <- predict(rf, test_data)
+confusionMatrix(p1, test_data$days_to_death)
+```
+After increasing the number of trees from 500 to 1000 there is an improvement on the algorithm from *91.8%* to *92.4%*. This means that we can correctly classify the 6 people more among 1000 patients. In real life, it means a lot and we succeeded that by just increasing the number of trees.
+
+- *b)* We have *74.2%* Accuracy in Logistic Regression and *92.4%* with Random Forest. There is a huge difference between these two algorithms. Due to we have a large number of features and Random Forest is a little bit more sophisticated algorithm that could be why we have much better accuracy with Random Forest compared to Logistic Regression.
 
 
 
