--- a/LUAD.Rmd
+++ b/LUAD.Rmd
@@ -15,8 +15,15 @@ We first load necessary libraries
 #install.packages("naniar")
 #install.packages("cowplot") 
 #install.packages("superml")
-#install.packages("VIM")
+#install.packages("factoextra")
 #install.packages("smotefamily")
+#install.packages("cvms")
+#install.packages("magrittr") # package installations are only needed the first time you use it
+#install.packages("dplyr")    # alternative installation of the %>%
+library(magrittr) # needs to be run every time you start R and want to use %>%
+library(dplyr) 
+library(cvms)
+library(factoextra)
 library(smotefamily)
 library(cluster)
 library(VIM)
@@ -34,9 +41,9 @@ library(caret) #dummyVars for One Hot Encoding
 ```{r}
 missing.values <- c("N/A","na","?","", "NaN", "not reported", "NA")
 
-data <- read.csv("C:\\Users\\sakma\\Desktop\\Ders Kayıtları\\Data Mining\\Final Project\\TCGA-LUAD_clinical.csv", na.strings=missing.values)
+#data <- read.csv("C:\\Users\\sakma\\Desktop\\Ders Kayıtları\\Data Mining\\Final Project\\TCGA-LUAD_clinical.csv", na.strings=missing.values)
 
-#data <- read.csv("C:\\Users\\Gaye\\OneDrive\\Masaüstü\\dersKayıtü\\DataScience\\DataScienceFinal\\TCGA-LUAD_clinical.csv", na.strings=missing.values)
+data <- read.csv("C:\\Users\\Gaye\\OneDrive\\Masaüstü\\dersKayıtü\\DataScience\\DataScienceFinal\\TCGA-LUAD_clinical.csv", na.strings=missing.values)
 
 ```
 
@@ -397,41 +404,23 @@ p1 <- ggplot(data_new, aes(x=reorder(days_to_death, days_to_death, function(x)-l
 geom_bar(fill='orange') +  labs(x='Classes', y="")
 p1
 ```
-Before applying Oversampling algorithm to data let's first split the data into two parts, train(%80) and test(%20) dataset.
+
+Firstly, we set a seed value to keep randomness always the same
 ```{r}
 set.seed(12345)
-#samples <- data_new$days_to_death %>% createDataPartition(p = 0.8, list = FALSE)
-
-#train  <- data_new[samples, ]
-#test <- data_new[-samples, ]
-
-#paste("Size of training set:",nrow(train),",",ncol(train))
-#paste("Size of test set:",nrow(test),",",ncol(test))
 ```
 
-
-It seems that we have a serious imbalance class classification problem. We're going to use the SMOTE algorithm, the SMOTE is an oversampling technique which synthesizes a new minority instance between a pair of one minority instance and one of its K nearest neighbor.
+Let's applying Oversampling algorithm to data.
 ```{r}
-paste("We're going to keep the imbalance data as 'imbalance_data' and 'data_new' is going to be our balanced data.")
-
+#We're going to keep the imbalance data as 'imbalance_data' and 'data_new' is going to be our balanced data.
 imbalance_data <- data_new
 
-
+#Apply Oversampling to data_new in order to get balanced data
 data_new <- SMOTE(subset(data_new, select = -c(days_to_death)),subset(data_new, select = c(days_to_death)),K=5)$data
-
-
 
 names(data_new)[names(data_new) == 'class'] <- 'days_to_death'
 
-set.seed(123)
-#samples <- data_new$days_to_death %>% createDataPartition(p = 0.8, list = FALSE)
-
-#train  <- data_new[samples, ]
-#test <- data_new[-samples, ]
-
-#paste("Size of training set:",nrow(train),",",ncol(train))
-#paste("Size of test set:",nrow(test),",",ncol(test))
-
+#Plot the result
 p1 <- ggplot(data_new, aes(x=reorder(days_to_death, days_to_death, function(x)-length(x)))) +
 geom_bar(fill='orange') +  labs(x='Classes(0: live < 5 years, 1: live > 5 years)', y="Count") + ggtitle("Balanced Data")
 p1
@@ -465,7 +454,9 @@ legend("topright", legend=c("Eigenvalue = 1"),
        col=c("red"), lty=5, cex=0.6)
 
 ```
-The above plot shows the bend at the eighteenth principal component, it is useful to decide how many PCs to retain for further analysis. In this case we have 18 PCs and we can see that the first 18 PCs explain most of the variability in the data.
+As you see above we have a line which name is Eigenvalue we can say eigenvalue is the standard deviation of our PC’s and we just take the first 20 PC’s which their eigenvalues greater than 1.
+
+The above plot shows the bend at the eighteenth principal component, it is useful to decide how many PCs to retain for further analysis. In this case we have 20 PCs and we can see that the first 20 PCs explain most of the variability in the data.
 
 ```{r}
 cumpro <- cumsum(X_data_pca$sdev^2 / sum(X_data_pca$sdev^2))
@@ -482,78 +473,100 @@ Let's see the importance of first 20 PCs out of 42:
 X_data_pca_20 <- prcomp(subset(X_data), center = TRUE, scale = TRUE, rank.= 20)
 summary(X_data_pca_20)
 ```
+From above summary, let's look at the cumulative proportion of PC20. It's value is 0.89 which means that we can explain %0.89 of total variance with 20 PCs out of 42.
 
+Now lets look at correlation again.
 ```{r}
 M <-cor(X_data_pca_20$x)
 corrplot(M, method = "color", addCoef.col="brown", order = "FPC", number.cex=0.9, 
          tl.cex=0.7, tl.col = "brown", tl.srt = 90)
 
 ```
+As you see above there is no correlation between our PC’s.That’s what we have wanted.
 
+
+Now we keep new data with name 'transformed_data' which have fewer columns to create a more powerful model.
 ```{r}
 transformed_data<- cbind(X_data_pca_20$x,y_data)
 head(transformed_data)
 ```
-
 ## 6) LOGISTIC REGRESSION
 ```{r}
 training_samples <- data_new$days_to_death %>% createDataPartition(p = 0.8, list = FALSE)
 
-
+#First we convert our days_to_death column to numeric
 data_new$days_to_death <- ifelse(data_new$days_to_death == "low risk", 0, 1)
 data_new$days_to_death <- as.factor(data_new$days_to_death)
 
+#Then we split our data into train and test data.
 train_data  <- data_new[training_samples, ]
 test_data <- data_new[-training_samples, ]
 
+#Now we are creating our model.
 model <- glm(days_to_death ~.,family=binomial,data=train_data)
 
+#Let’s see what it can be able to our model?
 fitted.results <- predict(model,subset(test_data,select=-c(days_to_death)),type='response')
 fitted.results <- ifelse(fitted.results > 0.5,1,0)
+
+confusionMatrix(test_data$days_to_death,as.factor(fitted.results))
+
 misClasificError <- mean(fitted.results != test_data$days_to_death)
 
 print(paste('Test Accuracy:',1-misClasificError))
 
+
 ```
-
-***
-
+As you see above model accuracy is 74 %. It is good but let's see if we can increase this ratio with PCA dataset(transformed data) which we created above.
 
 ## 6.X) LOGISTIC REGRESSION WTIH PCA(*Galiba çalışmıyor kontrol et*)
 
-We transform original data to the apllied pca data then split it into train and test set in order to apply logistic regression.
+Let's create new model but this time with PCA then we are going to compare the result with model that that is created at step 6.
 ```{r}
 training_samples_pca <- transformed_data$days_to_death %>% createDataPartition(p = 0.8, list = FALSE)
 
-
+#First we convert our days_to_death column to numeric
 transformed_data$days_to_death <- ifelse(transformed_data$days_to_death == "low risk", 0, 1)
 transformed_data$days_to_death <- as.factor(transformed_data$days_to_death)
 
+#Then we split our data into train and test data.
 train_data_pca  <- transformed_data[training_samples_pca, ]
 test_data_pca <- transformed_data[-training_samples_pca, ]
 
 #Now we can build our linear regression model with our new data
 model_pca <- glm(days_to_death ~.,family=binomial,data=train_data_pca)
 
+#Let’s see what it can be able to our model?
 fitted_results <- predict(model_pca,subset(test_data_pca,select=-c(days_to_death)),type='response')
 fitted.results <- ifelse(fitted.results > 0.5,1,0)
+
+confusionMatrix(test_data_pca$days_to_death,as.factor(fitted.results))
+
 misClasificError <- mean(fitted.results != test_data_pca$days_to_death)
 
 print(paste('Test Accuracy:',1-misClasificError))
 ```
 
+
+
 ## 6.Y.b) LOGISTIC REGRESSION WTIH MISSING VALUES (*ERROR*)
+This time we want to create our model with missing values then we are going to compare the result with model that do not contain missing values which is created at step 6.
 ```{r}
 #training_samples_missing <- data$days_to_death %>% createDataPartition(p = 0.8, list = FALSE)
 
-
+#Then we split our data into train and test data.
 #train_data_missing  <- data[training_samples_missing, ]
 #test_data_missing <- data[-training_samples_missing, ]
 
-#model_imbalance <- glm(days_to_death ~.,family=binomial,data=train_data_missing)
+#Now we can build our linear regression model with our data
+#model_missing <- glm(days_to_death ~.,family=binomial,data=train_data_missing)
 
-#fitted_results <- predict(model_imbalance,subset(test_data_missing,select=-c(days_to_death)),type='response')
+#Let’s see what it can be able to our model?
+#fitted_results <- predict(model_missing,subset(test_data_missing,select=-c(days_to_death)),type='response')
 #fitted.results <- ifelse(fitted.results > 0.5,1,0)
+
+#confusionMatrix(test_data_missing$days_to_death,as.factor(fitted.results))
+
 #misClasificError <- mean(fitted.results != test_data_missing$days_to_death)
 
 #print(paste('Test Accuracy:',1-misClasificError))
@@ -561,20 +574,27 @@ print(paste('Test Accuracy:',1-misClasificError))
 ```
 
 ## 6.Z.b) LOGISTIC REGRESSION WTIH IMBALANCED
+Let's also create our model with imbalanced data then we are going to compare the result with model that contain balanced data which is created at step 6.
 ```{r}
 training_samples_imbalance <- imbalance_data$days_to_death %>% createDataPartition(p = 0.8, list = FALSE)
 
-
+#First we convert our days_to_death column to numeric
 imbalance_data$days_to_death <- ifelse(imbalance_data$days_to_death == "low risk", 0, 1)
 imbalance_data$days_to_death <- as.factor(imbalance_data$days_to_death)
 
+#Then we split our data into train and test data.
 train_data_imbalance  <- imbalance_data[training_samples_imbalance, ]
 test_data_imbalance <- imbalance_data[-training_samples_imbalance, ]
 
+#Now we can build our linear regression model with our imbalanced data
 model_imbalance <- glm(days_to_death ~.,family=binomial,data=train_data_imbalance)
 
+#Let’s see what it can be able to our model?
 fitted_results <- predict(model_imbalance,subset(test_data_imbalance,select=-c(days_to_death)),type='response')
 fitted.results <- ifelse(fitted.results > 0.5,1,0)
+
+#confusionMatrix(test_data_missing$days_to_death,as.factor(fitted.results))
+
 misClasificError <- mean(fitted.results != test_data_imbalance$days_to_death)
 
 print(paste('Test Accuracy:',1-misClasificError))
